# sokol_app_uwp

./: .gitignore  readme.md
src/: App.cpp  App.h  CMakeLists.txt  DeviceResources.cpp  DeviceResources.h  DirectXHelper.h  Package.appxmanifest  Renderer.cpp  Renderer.h  SampleAppCode.c  SokolMain.c
src/sokol/: hhm.h  sokol.c  sokol.cpp  sokol_app.h  sokol_uwp_impl.cpp
